--- a/movies-java-spring-data-neo4j-main/src/main/resources/application.properties
+++ b/movies-java-spring-data-neo4j-main/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.neo4j.authentication.username=${NEO4J_USER:neo4j}
 spring.neo4j.authentication.password=${NEO4J_PASSWORD:neo4j123}
 spring.data.neo4j.database=${NEO4J_DATABASE:neo4j}
 logging.level.org.springframework.data.neo4j.cypher = trace
+spring.data.mongodb.uri=mongodb://BI:secret@42.192.1.101:27017/mydb
